# cognitao_ros2_examples

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
assets/machines/: wait.xml
assets/xml/: ros2_runner.xml
include/: Ros2ActionWaitServer.h
src/: server_example_main.cpp
