<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cognitao_ros2_examples</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ari@cogniteam.com">Ari Yakir</maintainer>
  <author email="ari@cogniteam.com">Ari Yakir</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>cognitao_ros2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


